# social_data_mining

./: .gitignore  README.Docker.md  README.md  compose.yaml  pyproject.toml
data/: README.md
example_data/: comment_rows.csv  comment_rows.sql  make_tables.sql  redditor_rows.csv  redditor_rows.sql  submission_rows.csv  submission_rows.sql
project/reddit_data/: comments.csv  submissions.csv
src/: config.py  crud.py  scratch.py  temp.py  test.py  utils.py
src/labs/meso_level/: sna_bot_analysis.ipynb  t1_finn.ipynb  t2_finn.ipynb
src/labs/social_network_analysis/: analysis.ipynb  finn.ipynb  finn_t3.ipynb  load_data_to_csv.ipynb  load_data_to_db.ipynb  opinion_walk.csv  tasks.md
src/labs/warm_up/: both.md  datasheet.md  datasheet_for_network_data.md  datasheet_text_image.md
src/sdm/: __init__.py  config.py  crud.py  crud_embeddings.py  utils.py
src/sdm/lab_scripts/image_analysis/: assignment.md  part_1.ipynb  part_2.ipynb  part_3.ipynb  pt_two_tasks.md
src/sdm/lab_scripts/meso_level/: sna_ideology_analysis.ipynb  t1_finn.ipynb
src/sdm/lab_scripts/social_network_analysis/: diffusion_walk.csv  finn.ipynb  finn_t3.ipynb  load_data_to_db.ipynb
src/sdm/lab_scripts/text_analysis/: data_driven_task.md  data_driven_task1.1.ipynb  data_driven_task1.2_preproccess.ipynb  data_driven_task1.3_lda.ipynb  data_driven_task1.ipynb  data_driven_task2.ipynb  task.md  task2_finn.ipynb  task3_finn.ipynb  theory_driven_analysis.ipynb  theory_driven_task2.ipynb  theory_driven_task3.ipynb  theory_driven_tasks.md
src/sdm/lab_scripts/warm_up/: datasheet_for_network_data.md  datasheet_text_image.md
src/sdm/project_scripts/: clusters.ipynb  example.ipynb  exploration_A.ipynb  explore_all_embeddings.ipynb  explore_tweet_embeddings.ipynb  feedback.md  network.ipynb
