[project]
name = "sdm"
version = "0.1.0"
description = "Workspace for mining of social data"
readme = "README.md"
authors = [
    { name = "vaughankraska", email = "vaughankraska@gmail.com" },
    { name = "anandmatt", email = "anandmathewms@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "jupyterlab-vim>=4.1.4",
    "jupyterlab>=4.3.1",
    "matplotlib>=3.9.3",
    "network-analysis",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "text-mining",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.5.2",
    "numpy==1.26.4",
    "scipy==1.12",
    "gensim>=4.3.3",
    "pyldavis>=3.4.1",
    "psycopg[binary]>=3.2.3",
]

[project.scripts]
sdm = "sdm:main"
ingest_pg = "sdm:ingest_pg"
inaccounts = "sdm:insert_accounts"
test = "sdm:test"

[tool.uv.sources]
network-analysis = { workspace = true }
text-mining = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
exclude = ["*.ipynb", "env.py"]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
exclude = ["*.ipynb"]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
